--- a/config/settings.yml
+++ b/config/settings.yml
@@ -42,7 +42,7 @@
 #   :allowed        -- users can sign up and use the system once they have registered.
 #   :not_allowed    -- users can only be added by system administrator. This is the default.
 #   :needs_approval -- users can sign up but must be approved before they can use the system.
-:user_signup: :allowed
+:user_signup: :not_allowed
 
 # Main and Admin Tabs.
 #------------------------------------------------------------------------------
